@startuml

title __SERVER's Class Diagram__\n

  package Server {
    class Client {
        {static} - serialVersionUID : long
        - run : Thread
        - listen : Thread
        - ready : boolean
        - orde : String
        - move : String
        - order : int[]
        - moves : String[][]
        - clientCount : int
        + started : boolean
        - running : boolean
        + Client()
        + run()
        + send()
        + listen()
        + getBackendClient()
        + askReady()
        + makeMoves()
        + makeOrder()
        + getClientCount()
        + setClientCount()
        + getMoves()
        + getOrder()
        + getStarted()
    }
  }
  

  package Server {
    class ClientBackend {
        - name : String
        - address : String
        - port : int
        - socket : DatagramSocket
        - ip : InetAddress
        - send : Thread
        - id : int
        + ClientBackend()
        + getName()
        + setName()
        + openConnection()
        + receive()
        + send()
        + close()
        + setID()
        + getID()
    }
  }
  

  package Server {
    class Identifier {
        {static} - ids : List<Integer>
        {static} - range : int
        {static} - index : int
        - Identifier()
        {static} + getIdentifier()
    }
  }
  

  package Server {
    class Server {
        - socket : DatagramSocket
        - port : int
        - run : Thread
        - manage : Thread
        - send : Thread
        - receive : Thread
        - running : boolean
        - started : boolean
        - clients : List<ServerClient>
        - clientResponse : List<Integer>
        - ready : boolean[]
        - clientCards : String[][]
        - moves : String
        - moveOrder : String
        - MAX_ATTEMPTS : int
        + Server()
        + run()
        - manageClients()
        - receive()
        - sendToAll()
        - sendToAllButMe()
        - send()
        - process()
        - disconnect()
        + clientCount()
        + setStarted()
        + getReady()
        + roundStart()
        + orderMoves()
        + indexOfMax()
        + start()
        - quit()
    }
  }
  

  package Server {
    class ServerClient {
        + name : String
        + address : InetAddress
        + port : int
        - ID : int
        + attempt : int
        + ServerClient()
        + getID()
    }
  }
  

  Client -up-|> Runnable
  Client -up-|> JFrame
  Client o-- ClientBackend : client
  AccessibleJFrame -up-|> AccessibleAWTFrame
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTFrame -up-|> AccessibleAWTWindow
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  AccessibleAWTWindow -up-|> AccessibleAWTContainer
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  WindowDisposerRecord -up-|> DisposerRecord
  AccessibleAWTContainer -up-|> AccessibleAWTComponent
  AccessibleAWTContainer +-down- AccessibleContainerHandler
  AccessibleContainerHandler -up-|> ContainerListener
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  DropTargetEventTargetFilter -up-|> EventTargetFilter
  MouseEventTargetFilter -up-|> EventTargetFilter
  WakingRunnable -up-|> Runnable
  AccessibleAWTComponent -up-|> Serializable
  AccessibleAWTComponent -up-|> AccessibleComponent
  AccessibleAWTComponent -up-|> AccessibleContext
  AccessibleAWTComponent +-down- AccessibleAWTComponentHandler
  AccessibleAWTComponent +-down- AccessibleAWTFocusHandler
  AccessibleAWTComponentHandler -up-|> ComponentListener
  AccessibleAWTFocusHandler -up-|> FocusListener
  BltBufferStrategy -up-|> BufferStrategy
  BltSubRegionBufferStrategy -up-|> SubRegionShowable
  BltSubRegionBufferStrategy -up-|> BltBufferStrategy
  DummyRequestFocusController -up-|> RequestFocusController
  FlipBufferStrategy -up-|> BufferStrategy
  FlipSubRegionBufferStrategy -up-|> SubRegionShowable
  FlipSubRegionBufferStrategy -up-|> FlipBufferStrategy
  ProxyCapabilities -up-|> ExtendedBufferCapabilities
  FlipContents -up-|> AttributeValue
  SingleBufferStrategy -up-|> BufferStrategy
  Server -up-|> Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
